--- a/index.html.html
+++ b/index.html.html
@@ -15,8 +15,7 @@
      <nav>
         <a href="#">Home</a>
         <a href="#">Noticias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">fale conosco</a>
+        <a href="#">contato</a>
      </nav>
      <main>
         <article>
